--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,21 @@
 *{
   margin:0;
 }
+
+.app{
+  background-color: #fafafa;
+  /* height:100vh; */
+}
+
+.app__header{
+  
+  background-color: white;
+  padding-left: 20px;
+  object-fit: contain;
+
+  border-bottom: 1px solid lightgray; 
+}
+
+.app__headerImage{
+  height: 8vh;
+}
