Styling Image Uploader

--- a/src/App.css
+++ b/src/App.css
@@ -12,12 +12,16 @@
   background-color: white;
   padding-left: 20px;
   object-fit: contain;
-
   border-bottom: 1px solid lightgray; 
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
 }
 
 .app__headerImage{
   height: 8vh;
+  object-fit: contain;
 }
 
 .app__signup {
