--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,12 @@
   /* height:100vh; */
 }
 
+.app__posts{
+padding: 20px;
+display: flex;
+justify-content:center;
+}
+
 .app__header{
   
   background-color: white;
