--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,9 @@ justify-content:center;
 }
 
 .app__header{
-  
+  position: sticky;
+  top: 0;
+  z-index: 1;
   background-color: white;
   padding-left: 20px;
   object-fit: contain;
